--- a/CSS/style.css
+++ b/CSS/style.css
@@ -288,7 +288,6 @@ body{
     text-align: center;
     font-size: 30px;
     color: #fff;
-    grid-area: title;
 }
 
 .history-serco{
@@ -296,24 +295,31 @@ body{
     margin: 15px;
 }
 
-.history-serco section p{
+.history-serco p{
     padding: 10px 0 10px 10px;
     font-size: 20px;
     line-height: 35px;
     font-weight: bold;
 }
-.con.history-serco .img-premio {
+.history-serco .img-premio {
     width: 200px;
     height: 200px;
 }
-.container-serco-carousel-aside .carousel-img {
+
+.container-serco-carousel-aside {
+    display: flex;
+    margin: 10px;
+}
+.container-serco-carousel-aside .serco-carousel{
     width:  100%;
     height: 100%;
-} 
-
-.container-serco-carousel-aside{
-    display: flex;
-    margin: 15px;
+}
+.container-serco-carousel-aside aside {
+    padding: 10px 10px 10px 10px;
+    font-size: 20px;
+    line-height: 35px;
+    font-weight: bold;
+    text-align: center;
 }
 
 
