--- a/CSS/main.css
+++ b/CSS/main.css
@@ -89,14 +89,14 @@ body {
   color: #fff;
   text-decoration: none;
   font-size: 20px;
-  letter-spacing: 2px;
-  margin-right: 20px;
+  letter-spacing: 1px;
+  margin-right: 40px;
   display: flex;
 }
 .foot-menu ul li a:hover {
   color: rgba(233, 86, 7, 0.7);
   transform: scale(1.15);
-  letter-spacing: 0.5px;
+  letter-spacing: 1.5px;
 }
 
 .foot-contact {
@@ -119,6 +119,163 @@ body {
   width: 40px;
   height: 40px;
   margin-bottom: 25px;
+}
+
+.gif-serco {
+  margin-top: 96.34px;
+  width: 100%;
+}
+
+.title {
+  text-align: center;
+  background-color: rgba(74, 74, 74, 0.5);
+  color: rgb(250, 250, 250);
+  padding: 15px;
+  font-size: 35px;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+.title span {
+  display: block;
+  margin: 10px 0 0 15px;
+}
+
+.main-container {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+  overflow: hidden;
+  padding: 20px;
+  background: linear-gradient(rgba(75, 71, 71, 0.8), rgba(75, 71, 71, 0.2)), url(../IMAGES/article-01.jpeg);
+  background-position: center;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background-size: cover;
+  background-position: center;
+}
+.main-container div h2 {
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  color: rgb(250, 250, 250);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+  margin: 10%;
+}
+.main-container div h3 {
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  color: rgb(8, 8, 8);
+  text-shadow: 0 0 8px rgba(155, 150, 150, 0.8);
+  margin: 10%;
+}
+
+.main-text-description {
+  color: #ffffff;
+  margin-top: 15px;
+  font-size: 50px;
+  text-align: center;
+  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
+}
+
+.main-reco h2 {
+  text-align: start;
+  background-color: rgba(74, 74, 74, 0.5);
+  color: rgb(250, 250, 250);
+  padding: 15px;
+  font-size: 35px;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+.main-reco img {
+  width: 50%;
+  height: auto;
+  display: block;
+  margin: 0 auto 20px;
+}
+
+.main-container .main-btn {
+  display: flex;
+  list-style: none;
+  justify-content: space-evenly;
+  margin: 20% 10% 0% 10%;
+}
+.main-container .main-btn li a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: rgb(250, 250, 250);
+  padding: 10px 30px;
+  border: 1px solid;
+  border-radius: 1000px;
+  display: inline-block;
+  transition: all 0.2s;
+  position: relative;
+}
+.main-container .main-btn li a:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 20px 30px rgba(27, 27, 27, 0.5);
+  border-color: rgb(250, 250, 250);
+  color: rgb(250, 250, 250);
+}
+.main-container .main-btn li a:active {
+  transform: translateY(-3px);
+}
+.main-container .main-btn li a::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
+  transition: all 0.3s;
+}
+.main-container .main-btn li a:hover::after {
+  background-color: rgba(233, 86, 7, 0.7);
+  transform: scaleX(1.4) scaleY(1.5);
+  opacity: 0;
+}
+
+.container-serco h1 {
+  margin-top: 96.34px;
+  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
+  text-align: center;
+  font-size: 30px;
+  color: rgb(250, 250, 250);
+}
+
+.history-serco {
+  display: flex;
+  margin: 15px;
+}
+.history-serco p {
+  padding: 10px 0 10px 10px;
+  font-size: 20px;
+  line-height: 35px;
+  font-weight: bold;
+}
+.history-serco img {
+  width: 200px;
+  height: 200px;
+}
+
+.container-serco-carousel-aside {
+  display: flex;
+  margin: 10px;
+  width: 100%;
+  height: 100%;
+}
+.container-serco-carousel-aside article {
+  width: 50%;
+  height: 50%;
+}
+.container-serco-carousel-aside aside {
+  padding: 10px 10px 10px 10px;
+  font-size: 20px;
+  line-height: 35px;
+  font-weight: bold;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
