--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -13,5 +13,6 @@ $text-font: 'Signika Negative', sans-serif;
 $text-weight-regular: 400 ; 
 $text-weight-light: 300 ;
 $text-weight-bold: bold ;
+$text-shadow-black: 0 0 10px rgba(0,0,0,0.8) ;
 
 
