--- a/CSS/main.css
+++ b/CSS/main.css
@@ -121,6 +121,18 @@ body {
   margin-bottom: 25px;
 }
 
+@media (width < 700px) {
+  .foot-menu ul {
+    flex-direction: column;
+  }
+  .foot-contact {
+    flex-direction: column;
+    margin-top: 15px;
+  }
+  .foot-icon {
+    margin: -5px;
+  }
+}
 .gif-serco {
   margin-top: 96.34px;
   width: 100%;
@@ -237,6 +249,52 @@ body {
   opacity: 0;
 }
 
+@media (width < 700px) {
+  .gif-serco {
+    width: 100%;
+  }
+  .title {
+    text-align: center;
+    padding: 15px;
+    font-size: 20px;
+  }
+  .title span {
+    display: block;
+    margin: 10px 0 0 15px;
+  }
+  .main-container {
+    margin: 10px;
+  }
+  .main-container h2 {
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+  }
+  .main-container h3 {
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+  }
+  .main-btn a {
+    justify-content: space-evenly;
+    margin: 20px 10px 0 10px;
+    font-size: 15px;
+  }
+  .main-text-description {
+    margin-top: 15px;
+    font-size: 25px;
+  }
+  .main-reco h2 {
+    font-size: 20px;
+  }
+  .main-reco img {
+    width: 80%;
+    height: auto;
+    margin-bottom: 10px;
+  }
+}
 .container-serco h1 {
   margin-top: 96.34px;
   background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
@@ -276,6 +334,280 @@ body {
   line-height: 35px;
   font-weight: bold;
   text-align: center;
+}
+
+.sucursales {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: "title" "sucu1" "sucu2" "sucu3";
+}
+.sucursales h1 {
+  margin-top: 96.34px;
+  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
+  text-align: center;
+  font-size: 30px;
+  color: rgb(250, 250, 250);
+  grid-area: title;
+}
+.sucursales h2 {
+  color: rgb(8, 8, 8);
+  text-align: center;
+  margin-bottom: 20px;
+  text-shadow: 1px 1px 0 0 10px rgba(0, 0, 0, 0.8);
+  font-size: 40px;
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+.sucursales h3 {
+  text-align: center;
+  font-style: italic;
+  color: rgb(250, 250, 250);
+  text-shadow: 1px 1px rgba(233, 86, 7, 0.7);
+  padding-bottom: 5px;
+  margin-bottom: 40px;
+}
+.sucursales .sucursal-1 {
+  background-color: rgba(39, 39, 39, 0.3);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  box-shadow: 1px 1px 20px black;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  border-radius: 13px;
+  margin: 25px;
+  padding: 20px;
+  place-items: center;
+  grid-area: sucu1;
+}
+.sucursales .sucursal-2 {
+  background-color: rgba(39, 39, 39, 0.3);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  box-shadow: 1px 1px 20px black;
+  display: flex;
+  justify-content: space-evenly;
+  border-radius: 13px;
+  margin: 25px;
+  padding: 20px;
+  place-items: center;
+  grid-area: sucu2;
+}
+.sucursales .sucursal-3 {
+  background-color: rgba(39, 39, 39, 0.3);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  box-shadow: 1px 1px 20px black;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  place-items: center;
+  border-radius: 13px;
+  margin: 25px;
+  padding: 20px;
+  grid-area: sucu3;
+}
+
+.btn-ubic {
+  padding: 15px 30px;
+  background-color: rgb(39, 39, 39);
+  border: none;
+  text-decoration: none;
+  margin: auto;
+  cursor: pointer;
+  border-radius: 28px;
+  width: 50%;
+  transition: 0s;
+  color: rgb(250, 250, 250);
+  letter-spacing: 1px;
+  display: block;
+  text-align: center;
+}
+.btn-ubic:hover {
+  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
+  box-shadow: 0 0 10px rgb(246, 246, 246), 0 0 20px rgb(219, 136, 47), 0 0 50px rgb(246, 164, 31);
+  color: rgb(250, 250, 250);
+}
+
+@media (width < 700px) {
+  .sucursales h1 {
+    font-size: 35px;
+    margin-top: 96.34px;
+  }
+  .sucursales h2 {
+    margin-top: 20px;
+    font-size: 50px;
+  }
+  .sucursales h3 {
+    font-size: 25px;
+  }
+  .sucursales a {
+    font-size: 20px;
+  }
+  .sucursales .sucursal-1 {
+    flex-direction: column-reverse;
+  }
+  .sucursales .sucursal-1 h3 {
+    font-size: 25px;
+  }
+  .sucursales .sucursal-2 {
+    flex-direction: column-reverse;
+  }
+  .sucursales .sucursal-3 {
+    flex-direction: column-reverse;
+  }
+  .sucursales iframe {
+    width: 100%;
+  }
+}
+@media (width < 400px) {
+  .sucursales h1 {
+    font-size: 25px;
+    margin-top: 96.34px;
+  }
+  .sucursales h2 {
+    font-size: 35px;
+    margin-top: 20px;
+  }
+  .sucursales h3 {
+    font-size: 20px;
+  }
+  .sucursales a {
+    font-size: 15px;
+  }
+  .sucursales .sucursal-1 h3 {
+    font-size: 20px;
+  }
+  .sucursales .sucursal-1 {
+    flex-direction: column-reverse;
+  }
+  .sucursales .sucursal-2 {
+    flex-direction: column-reverse;
+  }
+  .sucursales .sucursal-3 {
+    flex-direction: column-reverse;
+  }
+}
+.contact-form-main {
+  margin-top: 96.34px;
+}
+.contact-form-main h1 {
+  text-align: center;
+  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
+  color: rgb(250, 250, 250);
+  padding: 15px;
+  font-size: 60px;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+
+.contact-form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  background-image: linear-gradient(45deg, #330808, #3a2c09);
+  border-radius: 2.5em;
+  padding: 50px;
+  width: 70%;
+  height: 70%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.contact-form::before {
+  content: "";
+  background-image: linear-gradient(45deg, #ff0000, #ffb700);
+  height: 358px;
+  width: 309px;
+  position: absolute;
+  margin-top: -34px;
+  margin-left: px;
+  z-index: -1;
+  border-radius: 2.7em;
+}
+
+.contact-form-button {
+  margin-top: 10px;
+  font-size: 17px;
+  background: rgba(233, 86, 7, 0.7);
+  color: rgb(8, 8, 8);
+  padding: 0.7em 5.5em;
+  display: flex;
+  align-items: center;
+  border: 2px solid rgba(102, 218, 67, 0);
+  border-radius: 5em;
+  overflow: hidden;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+.contact-form-button:hover {
+  border: 2px solid rgba(233, 86, 7, 0.7);
+  background: rgb(8, 8, 8);
+  color: rgba(233, 86, 7, 0.7);
+}
+.contact-form-button:active {
+  border: 2px solid rgba(102, 218, 67, 0);
+  background: rgba(233, 86, 7, 0.7);
+  color: rgb(8, 8, 8);
+}
+
+.contact-form-input {
+  width: calc(100% - 10px);
+  padding: 8px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(102, 218, 67, 0);
+  border-bottom: 1px solid rgba(233, 86, 7, 0.7);
+  outline: none;
+  background-color: transparent;
+  color: rgba(233, 86, 7, 0.7);
+  transition: 0.2s;
+}
+.contact-form-input:focus {
+  border: 1px solid rgba(102, 218, 67, 0);
+  border-bottom: 1px solid rgba(233, 86, 7, 0.7);
+  background-color: transparent;
+  color: rgb(211, 95, 0);
+}
+.contact-form-input::placeholder {
+  color: rgb(155, 114, 91);
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.contact-form-textarea {
+  width: calc(100% - 10px);
+  padding: 8px;
+  height: 100px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(102, 218, 67, 0);
+  border-bottom: 1px solid rgba(233, 86, 7, 0.7);
+  outline: none;
+  background-color: transparent;
+  color: rgba(233, 86, 7, 0.7);
+}
+.contact-form-textarea::placeholder {
+  color: #9b725b;
+}
+.contact-form-textarea:focus {
+  border: 1px solid rgba(102, 218, 67, 0);
+  border-bottom: 1px solid rgba(233, 86, 7, 0.7);
+  background-color: transparent;
+  color: rgba(233, 86, 7, 0.7);
+}
+
+@media (width < 500px) {
+  .contact-form-main h1 {
+    font-size: 30px;
+  }
+  .contact-form {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
