--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -15,4 +15,15 @@ $text-weight-light: 300 ;
 $text-weight-bold: bold ;
 $text-shadow-black: 0 0 10px rgba(0,0,0,0.8) ;
 
+*{
+    box-sizing: border-box;
+    font-family: $text-font; 
+}
+body{
+    background: $background-principal;
+    background-size:cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
 
