--- a/scss/index.scss
+++ b/scss/index.scss
@@ -118,3 +118,59 @@
     }
 
 } 
+
+
+
+//RESPONSIVE
+@media (width <700px) {
+    .gif-serco {
+        width: 100%;
+    } 
+    .title{
+        text-align: center;
+        padding: 15px;
+        font-size: 20px;
+        span{
+            display: block;
+            margin: 10px 0 0 15px;
+        }
+    }
+    .main-container{
+        margin: 10px;
+        h2{
+            font-size: 50px;
+            display: flex;
+            justify-content: center;
+            margin: 5px;
+        }
+        h3{
+            font-size: 20px;
+            display: flex;
+            justify-content: center;
+            margin: 10px;
+        }
+    }
+
+    .main-btn a{
+            justify-content: space-evenly;
+            margin: 20px 10px 0 10px;
+            font-size: 15px;
+        } 
+    .main-text-description{
+        margin-top: 15px;
+        font-size: 25px;
+    }
+    .main-reco {
+        h2{
+            font-size: 20px;
+        }
+        img{
+            width: 80%;
+            height: auto;
+            margin-bottom: 10px;
+        }
+    }
+}
+
+
+
