--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;500;700&display=swap');
 @import "_vars";
-@import "_commons";
 @import "_nav-and-footer";
 @import "index";
+@import "servicios";
 @import "sobre-serco";
+@import "sucursales";
+@import "contacto";
