--- a/CSS/main.css
+++ b/CSS/main.css
@@ -295,6 +295,54 @@ body {
     margin-bottom: 10px;
   }
 }
+/*body {
+    margin: 0;
+    padding: 0;
+  }
+
+  main {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  h1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  p {
+    text-align: justify;
+    margin-bottom: 20px;
+  }
+  img {
+    display: block;
+    max-width: 100%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+  .service-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+  }
+
+article {
+    border: 1px solid #ccc;
+    padding: 20px;
+  }
+
+  h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  h3 {
+    font-size: 16px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  li {
+    margin-bottom: 5px;}*/
 .container-serco h1 {
   margin-top: 96.34px;
   background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
@@ -321,14 +369,14 @@ body {
 .container-serco-carousel-aside {
   display: flex;
   margin: 10px;
-  width: 100%;
-  height: 100%;
 }
 .container-serco-carousel-aside article {
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 .container-serco-carousel-aside aside {
+  width: 50%;
   padding: 10px 10px 10px 10px;
   font-size: 20px;
   line-height: 35px;
@@ -336,10 +384,29 @@ body {
   text-align: center;
 }
 
+@media (width < 850px) {
+  .container-serco-carousel-aside {
+    flex-direction: column-reverse;
+  }
+  .container-serco-carousel-aside aside {
+    width: 100%;
+    margin-top: -45px;
+  }
+}
 @media (width < 500px) {
+  .history-serco {
+    width: 100%;
+  }
   .history-serco img {
     width: 100px;
     height: 100px;
+  }
+  .container-serco-carousel-aside {
+    flex-direction: column;
+  }
+  .container-serco-carousel-aside aside {
+    width: 100%;
+    margin-top: 45px;
   }
 }
 .sucursales {
