--- a/scss/sobre-serco.scss
+++ b/scss/sobre-serco.scss
@@ -24,13 +24,13 @@
 .container-serco-carousel-aside {
     display: flex;
     margin: 10px; 
-    width:  100%;
-    height: 100%;
     article {
-        width:  50%;
-        height: 50%;
+        width:  100%;
+        height: 100%;
+        overflow: hidden;
     }
     aside {
+        width: 50%;
         padding: 10px 10px 10px 10px;
         font-size: 20px;
         line-height: 35px;
@@ -41,11 +41,28 @@
 
 
 //RESPONSIVE
+@media (width < 850px) {
+.container-serco-carousel-aside {
+    flex-direction: column-reverse;
+    aside{
+        width: 100%;
+        margin-top: -45px;
+    }
+}
+}
 @media (width < 500px) {
 .history-serco {
+    width: 100%;
     img {
         width: 100px;
         height: 100px;
+    }
+}
+.container-serco-carousel-aside {
+    flex-direction: column;
+    aside{
+        width: 100%;
+        margin-top: 45px;
     }
 }
 }
