--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;500;700&display=swap');
 @import "_vars";
+@import "_mixins";
 @import "_nav-and-footer";
-@import "index";
-@import "servicios";
-@import "sobre-serco";
-@import "sucursales";
-@import "contacto";
+@import "_index";
+@import "_servicios";
+@import "_sobre-serco";
+@import "_sucursales";
+@import "_contacto";
