--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,6 +11,14 @@ body {
   background-attachment: fixed;
 }
 
+.tittle-general, .contact-form-main h1, .sucursales h1, .container-serco h1, .service-conteiner h1 {
+  margin-top: 96.34px;
+  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
+  text-align: center;
+  font-size: 60px;
+  color: rgb(250, 250, 250);
+}
+
 .nav-container {
   position: fixed;
   top: 0;
@@ -298,18 +306,12 @@ body {
 .service-conteiner {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
-  grid-template-areas: "tittle tittle tittle" "description description service2" "service1 service1 service2" "service3 service4 service5";
+  grid-template-areas: "tittle tittle tittle" "description description description" "service12 service12 service12" "service3 service4 service5";
 }
 
 .service-conteiner h1 {
-  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
-  margin-top: 96.34px;
-  text-align: center;
-  font-size: 50px;
-  color: rgb(250, 250, 250);
-  width: 100%;
   grid-area: tittle;
 }
 .service-conteiner h2 {
@@ -342,7 +344,7 @@ body {
   -webkit-backdrop-filter: blur(5px);
   box-shadow: 1px 1px 20px black;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   border-radius: 13px;
   margin: 25px;
@@ -350,10 +352,9 @@ body {
   place-items: center;
   grid-area: description;
 }
-.tittle-service img {
-  height: 50%;
-  clip-path: circle();
-  width: 50%;
+
+.service-1-2 {
+  grid-area: service12;
 }
 
 .service-1 {
@@ -370,11 +371,6 @@ body {
   place-items: center;
   grid-area: service1;
 }
-.service-1 img {
-  height: 100%;
-  clip-path: circle();
-  width: 100%;
-}
 
 .service-2 {
   background-color: rgba(39, 39, 39, 0.3);
@@ -389,11 +385,6 @@ body {
   padding: 20px;
   place-items: center;
   grid-area: service2;
-}
-.service-2 img {
-  height: 100%;
-  clip-path: circle();
-  width: 100%;
 }
 
 .service-3 {
@@ -410,11 +401,6 @@ body {
   place-items: center;
   grid-area: service3;
 }
-.service-3 img {
-  height: 100%;
-  clip-path: circle();
-  width: 100%;
-}
 
 .service-4 {
   background-color: rgba(39, 39, 39, 0.3);
@@ -430,11 +416,6 @@ body {
   place-items: center;
   grid-area: service4;
 }
-.service-4 img {
-  height: 100%;
-  clip-path: circle();
-  width: 100%;
-}
 
 .service-5 {
   background-color: rgba(39, 39, 39, 0.3);
@@ -449,19 +430,6 @@ body {
   padding: 20px;
   place-items: center;
   grid-area: service5;
-}
-.service-5 img {
-  height: 100%;
-  clip-path: circle();
-  width: 100%;
-}
-
-.container-serco h1 {
-  margin-top: 96.34px;
-  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
-  text-align: center;
-  font-size: 30px;
-  color: rgb(250, 250, 250);
 }
 
 .history-serco {
@@ -527,14 +495,6 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   grid-template-areas: "title" "sucu1" "sucu2" "sucu3";
-}
-.sucursales h1 {
-  margin-top: 96.34px;
-  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
-  text-align: center;
-  font-size: 30px;
-  color: rgb(250, 250, 250);
-  grid-area: title;
 }
 .sucursales h2 {
   color: rgb(8, 8, 8);
@@ -678,15 +638,6 @@ body {
 .contact-form-main {
   margin-top: 96.34px;
 }
-.contact-form-main h1 {
-  text-align: center;
-  background-image: linear-gradient(45deg, #330808, rgba(233, 86, 7, 0.7));
-  color: rgb(250, 250, 250);
-  padding: 15px;
-  font-size: 60px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-}
-
 .contact-form {
   display: flex;
   align-items: center;
