--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -6,3 +6,18 @@
     font-size: 60px;
     color: $color-text-white;
 }
+//mixins
+
+@mixin backgroundgral ($flex,$just,$place){
+    display: flex;
+    flex-direction: $flex;
+    justify-content: $just;
+    place-items: $place;
+    background-color: rgb(39, 39, 39, 0.3);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    box-shadow: 1px 1px 20px black;
+    border-radius: 13px;
+    margin: 25px;
+    padding: 20px;
+}
