--- a/scss/_nav-and-footer.scss
+++ b/scss/_nav-and-footer.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: $color-principal;
+    background-color: $color-footer-background;
     width: 100%;
     z-index: 99;   
 }
@@ -17,14 +17,14 @@
     li{
         a{
             text-decoration: none;
-            color: $color-text-white;
+            color: $color-principal;
             margin: 10px;
             letter-spacing: 1px;
             font-size: 18px;
             font-weight: $text-weight-bold;
             transition: all 0.2s ease;
             &:hover {
-                color: $color-footer-background;
+                color: $color-principal;
                 transform: scale(1.15);
                 letter-spacing: 0.5px;
             }  
@@ -32,18 +32,18 @@
     }
 }
 .nav-menu .dropdown-custom{
-    background-color: rgb(39, 39, 39, 0.8);
+    background-color: $color-principal;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     li{
         a{
-            color: $color-text-white;
+            color: $color-footer-background;
             letter-spacing: 1.5px;
             font-weight: $text-weight-bold;
             max-width: auto;
             text-align: center;
             &:hover{
-                background-color: $color-principal;    
+                background-color: $color-text-white;    
             }  
         }
     }
