--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -5,7 +5,7 @@ rgb(233, 86, 7, 0.7));
 $color-principal: rgb(233, 86, 7 , 0.7);
 $color-text-white: rgb(250, 250, 250);
 $color-text-black: rgb(8, 8, 8);
-$color-footer-background:rgb(39, 39, 39);
+$color-footer-background:rgb(39, 39, 39 , 0.8);
 
 
 //TEXT 
