--- a/CSS/main.css
+++ b/CSS/main.css
@@ -273,7 +273,7 @@ body {
     margin: 10px;
   }
   .main-container h2 {
-    font-size: 50px;
+    font-size: 30px;
     display: flex;
     justify-content: center;
     margin: 5px;
@@ -485,6 +485,10 @@ body {
 }
 
 @media (width < 850px) {
+  .history-serco img {
+    width: 150px;
+    height: 150px;
+  }
   .container-serco-carousel-aside {
     flex-direction: column-reverse;
   }
@@ -493,20 +497,43 @@ body {
     margin-top: -45px;
   }
 }
-@media (width < 500px) {
+@media (width < 380px) {
+  .container-serco-carousel-aside {
+    flex-direction: column;
+  }
   .history-serco {
+    display: flex;
+    margin: 0%;
+  }
+  .history-serco p {
+    margin-left: -5px;
+    font-size: 20px;
+    line-height: 35px;
+    font-weight: bold;
     width: 100%;
   }
   .history-serco img {
+    margin-left: -15px;
     width: 100px;
     height: 100px;
   }
   .container-serco-carousel-aside {
+    display: flex;
     flex-direction: column;
+    margin: 0%;
+  }
+  .container-serco-carousel-aside article {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
   }
   .container-serco-carousel-aside aside {
     width: 100%;
-    margin-top: 45px;
+    padding-top: 30%;
+    font-size: 20px;
+    line-height: 35px;
+    font-weight: bold;
+    text-align: center;
   }
 }
 .sucursales {
